packages/svelte/tests/compiler-errors/samples/css-global-block-multiple/_config.js
import { test } from '../../test';

export default test({
	error: {
		code: 'css_global_block_invalid_list',
		message: 'A :global {...} block cannot be part of a selector list with more than one item',
		position: [9, 31]
	}
});
